trying to see if this fixes overflow of text on margin border for some areas

--- a/scripts/layout/common.css
+++ b/scripts/layout/common.css
@@ -317,6 +317,13 @@ td {
 	.lists,
 	.center_text {
 		font-size: 85%;
+		margin-left: 2%;
+		margin-right: 2%;
+	}
+
+	#main-body {
+		margin-left: 4%;
+		margin-right: 4%;
 	}
 }
 
